build(native): Add missing java option.