@@ -112,6 +112,8 @@ do
   --java-options "-Dspring.profiles.active=default" \
   --java-options "-Dspring.config.location=classpath:/application.yml" \
   --java-options "-Dspring.jmx.enabled=false" \
+  --java-options "--add-opens javafx.controls/javafx.scene.control=ALL-UNNAMED" \
+  --java-options "--add-opens javafx.base/com.sun.javafx.event=ALL-UNNAMED" \
   --runtime-image build/java-runtime \
   --icon src/distrib/mac/spo.icns \
   --app-version "${APP_VERSION}" \
